--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     Rtsne,
     shiny (>= 1.5.0),
     thinkr,
-    uwot
+    uwot,
+    shinythemes
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
@@ -39,6 +40,7 @@ Suggests:
     rmarkdown,
     knitr,
     spelling,
+    magick,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Language: en-US
