--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,14 +26,13 @@ Imports:
     processx,
     RColorBrewer,
     reshape2,
+    rlang,
     Rtsne,
     shiny (>= 1.5.0),
     thinkr,
     uwot,
     shinythemes
 Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.1
 URL: https://github.com/jcooperdevlin/JoesFlow
 BugReports: https://github.com/jcooperdevlin/JoesFlow/issues
 Suggests: 
@@ -45,3 +44,4 @@ Suggests:
 Config/testthat/edition: 3
 Language: en-US
 VignetteBuilder: knitr
+RoxygenNote: 7.2.0
