--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.0.0.9000
 Authors@R: person('Cooper', 'Devlin', email = 'jcooperdevlin@gmail.com', role = c('cre', 'aut'))
 Description: Joes Flow simplified analysis for single cell modality data.
 License: MIT + file LICENSE
+Depends: patchwork
 Imports: 
     attempt,
     circlize,
