--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,15 @@ S3method(clusterJF,matrix)
 S3method(clusterJF,prcomp)
 S3method(clusterJF,tbl)
 export(clusterJF)
+export(marker_heatJF)
 export(run_app)
 export(sb_clusterJF)
 import(dplyr)
 import(ggplot2)
 import(shiny)
+importFrom(ComplexHeatmap,Heatmap)
+importFrom(ComplexHeatmap,columnAnnotation)
+importFrom(circlize,colorRamp2)
 importFrom(ggrepel,geom_label_repel)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
