--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(clusterJF,matrix)
 S3method(clusterJF,prcomp)
 S3method(clusterJF,tbl)
 export(clusterJF)
+export(compositionJF)
 export(marker_heatJF)
 export(run_app)
 export(sb_clusterJF)
