--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,10 @@
 Package: JoesFlow
 Title: Joes Flow simplified analysis for single cell modality data
-Version: 0.0.0.9000
-Authors@R: person('Cooper', 'Devlin', email = 'jcooperdevlin@gmail.com', role = c('cre', 'aut'))
+Version: 0.1.0-1
+Authors@R: c(person('Cooper', 'Devlin', email = 'jcooperdevlin@gmail.com', 
+                    role = c('cre', 'aut')),
+             person('Randy', 'Johnson', email = 'johnsonra@mail.nih.gov',
+                    role = 'aut'))
 Description: Joes Flow simplified analysis for single cell modality data.
 License: MIT + file LICENSE
 Imports: 
@@ -32,7 +35,7 @@ Imports:
     uwot
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.0
 URL: https://github.com/jcooperdevlin/JoesFlow
 BugReports: https://github.com/jcooperdevlin/JoesFlow/issues
 Suggests: 
