Pass `check()` and tidy up a bit
All errors, warnings and notes are now resolved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,27 +3,63 @@
 S3method(clusterJF,matrix)
 S3method(clusterJF,prcomp)
 S3method(clusterJF,tbl)
+export(app_server)
+export(app_ui)
 export(clusterJF)
 export(compositionJF)
 export(marker_heatJF)
 export(run_app)
 export(sb_clusterJF)
+import(ComplexHeatmap)
+import(Rtsne)
 import(dplyr)
+import(fastcluster)
 import(ggplot2)
-import(shiny)
+import(patchwork)
+import(uwot)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,columnAnnotation)
+importFrom(DT,renderDT)
+importFrom(DT,renderDataTable)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(circlize,colorRamp2)
+importFrom(cowplot,plot_grid)
 importFrom(ggrepel,geom_label_repel)
-importFrom(golem,activate_js)
-importFrom(golem,add_resource_path)
-importFrom(golem,bundle_resources)
-importFrom(golem,favicon)
-importFrom(golem,with_golem_options)
+importFrom(ggsci,pal_d3)
+importFrom(ggsci,pal_igv)
+importFrom(gridExtra,arrangeGrob)
+importFrom(gridExtra,grid.arrange)
+importFrom(matrixStats,colVars)
+importFrom(reshape2,dcast)
+importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(shiny,HTML)
+importFrom(shiny,br)
+importFrom(shiny,brushOpts)
 importFrom(shiny,column)
+importFrom(shiny,downloadButton)
+importFrom(shiny,downloadHandler)
+importFrom(shiny,fileInput)
+importFrom(shiny,fluidRow)
+importFrom(shiny,h4)
+importFrom(shiny,mainPanel)
+importFrom(shiny,navbarPage)
+importFrom(shiny,numericInput)
+importFrom(shiny,observe)
+importFrom(shiny,plotOutput)
+importFrom(shiny,reactive)
+importFrom(shiny,reactiveValues)
+importFrom(shiny,renderPlot)
+importFrom(shiny,renderUI)
+importFrom(shiny,selectInput)
+importFrom(shiny,selectizeInput)
 importFrom(shiny,shinyApp)
-importFrom(shiny,tagAppendAttributes)
+importFrom(shiny,sidebarPanel)
+importFrom(shiny,sliderInput)
+importFrom(shiny,tabPanel)
+importFrom(shiny,tabsetPanel)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(shiny,uiOutput)
+importFrom(shiny,withProgress)
+importFrom(tidyr,pivot_wider)
