--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,15 @@
 Package: JoesFlow
 Title: Joes Flow simplified analysis for single cell modality data
-Version: 0.1.0-1
+Version: 0.1.0-2
 Authors@R: c(person('Cooper', 'Devlin', email = 'jcooperdevlin@gmail.com', 
                     role = c('cre', 'aut')),
              person('Randy', 'Johnson', email = 'johnsonra@mail.nih.gov',
                     role = 'aut'))
 Description: Joes Flow simplified analysis for single cell modality data.
 License: MIT + file LICENSE
-Depends: patchwork
 Imports: 
-    attempt,
     circlize,
     ComplexHeatmap,
-    config (>= 0.3.1),
     cowplot,
     dplyr,
     DT,
@@ -20,24 +17,18 @@ Imports:
     ggplot2,
     ggrepel,
     ggsci,
-    glue,
-    golem (>= 0.3.1),
     gridExtra,
-    hexbin,
     matrixStats,
-    periscope,
-    processx,
+    patchwork,
     RColorBrewer,
     reshape2,
     rlang,
     Rtsne,
     shiny (>= 1.5.0),
-    thinkr,
+    tidyr,
     uwot,
     shinythemes
 Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.2.0
 URL: https://github.com/jcooperdevlin/JoesFlow
 BugReports: https://github.com/jcooperdevlin/JoesFlow/issues
 Suggests: 
@@ -49,4 +40,4 @@ Suggests:
 Config/testthat/edition: 3
 Language: en-US
 VignetteBuilder: knitr
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
