--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,26 +10,24 @@ export(compositionJF)
 export(marker_heatJF)
 export(run_app)
 export(sb_clusterJF)
-import(ComplexHeatmap)
-import(Rtsne)
 import(dplyr)
-import(fastcluster)
 import(ggplot2)
 import(patchwork)
-import(uwot)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,columnAnnotation)
+importFrom(ComplexHeatmap,draw)
 importFrom(DT,renderDT)
 importFrom(DT,renderDataTable)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(Rtsne,Rtsne)
 importFrom(circlize,colorRamp2)
 importFrom(cowplot,plot_grid)
+importFrom(fastcluster,hclust)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggsci,pal_d3)
 importFrom(ggsci,pal_igv)
 importFrom(gridExtra,arrangeGrob)
 importFrom(gridExtra,grid.arrange)
-importFrom(matrixStats,colVars)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
@@ -63,3 +61,4 @@ importFrom(shiny,tags)
 importFrom(shiny,uiOutput)
 importFrom(shiny,withProgress)
 importFrom(tidyr,pivot_wider)
+importFrom(uwot,umap)
