Add/implement dimreductJF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,13 @@
 S3method(clusterJF,matrix)
 S3method(clusterJF,prcomp)
 S3method(clusterJF,tbl)
+S3method(dimreductJF,matrix)
+S3method(dimreductJF,prcomp)
 export(app_server)
 export(app_ui)
 export(clusterJF)
 export(compositionJF)
+export(dimreductJF)
 export(marker_heatJF)
 export(run_app)
 export(sb_clusterJF)
