--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(run_app)
 export(sb_clusterJF)
 import(dplyr)
 import(ggplot2)
+import(hexbin)
 import(patchwork)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,columnAnnotation)
