Set up unit testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,9 @@ export(compositionJF)
 export(dimreductJF)
 export(marker_heatJF)
 export(run_app)
+export(save_flowdata)
 export(sb_clusterJF)
+export(setup_testing_data)
 import(dplyr)
 import(ggplot2)
 import(hexbin)
