testing updates for issue 4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Suggests:
     knitr,
     spelling,
     magick,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    stringr
 Config/testthat/edition: 3
 Language: en-US
 VignetteBuilder: knitr
