Fix issue with unrecognized characters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,5 +66,7 @@ importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shiny,uiOutput)
 importFrom(shiny,withProgress)
+importFrom(stringi,stri_enc_detect)
+importFrom(stringi,stri_read_raw)
 importFrom(tidyr,pivot_wider)
 importFrom(uwot,umap)
