Allow arbitrary number of colors
This solves issue #9

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(ComplexHeatmap,draw)
 importFrom(DT,renderDT)
 importFrom(DT,renderDataTable)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Rtsne,Rtsne)
 importFrom(circlize,colorRamp2)
 importFrom(cowplot,plot_grid)
