--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,8 @@ Imports:
     uwot,
     shinythemes
 Encoding: UTF-8
-URL: https://github.com/jcooperdevlin/JoesFlow
-BugReports: https://github.com/jcooperdevlin/JoesFlow/issues
+URL: https://github.com/NIAID/JoesFlow
+BugReports: https://github.com/NIAID/JoesFlow/issues
 Suggests: 
     rmarkdown,
     knitr,
