--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,16 @@ S3method(clusterJF,prcomp)
 S3method(clusterJF,tbl)
 S3method(dimreductJF,matrix)
 S3method(dimreductJF,prcomp)
+S3method(extract_values,matrix)
+S3method(extract_values,prcomp)
 export(app_server)
 export(app_ui)
 export(clusterJF)
 export(compositionJF)
 export(dimreductJF)
+export(extract_sb_loadings)
+export(extract_sb_values)
+export(extract_values)
 export(marker_heatJF)
 export(run_app)
 export(save_flowdata)
@@ -33,8 +38,6 @@ importFrom(fastcluster,hclust)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggsci,pal_d3)
 importFrom(ggsci,pal_igv)
-importFrom(gridExtra,arrangeGrob)
-importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
