Documentation and devtools::check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,11 +50,13 @@ importFrom(shiny,downloadHandler)
 importFrom(shiny,fileInput)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h4)
+importFrom(shiny,isTruthy)
 importFrom(shiny,mainPanel)
 importFrom(shiny,navbarPage)
 importFrom(shiny,numericInput)
 importFrom(shiny,observe)
 importFrom(shiny,plotOutput)
+importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
