--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(shiny,fluidRow)
 importFrom(shiny,h4)
 importFrom(shiny,isTruthy)
 importFrom(shiny,mainPanel)
+importFrom(shiny,modalDialog)
 importFrom(shiny,navbarPage)
 importFrom(shiny,numericInput)
 importFrom(shiny,observe)
@@ -64,6 +65,7 @@ importFrom(shiny,renderUI)
 importFrom(shiny,selectInput)
 importFrom(shiny,selectizeInput)
 importFrom(shiny,shinyApp)
+importFrom(shiny,showModal)
 importFrom(shiny,sidebarPanel)
 importFrom(shiny,sliderInput)
 importFrom(shiny,tabPanel)
