--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: JoesFlow
 Title: Joes Flow simplified analysis for single cell modality data
-Version: 0.1.2-3
+Version: 0.1.3
 Authors@R: c(person('Cooper', 'Devlin', email = 'jcooperdevlin@gmail.com', 
                     role = c('cre', 'aut')),
              person('Randy', 'Johnson', email = 'johnsonra@mail.nih.gov',
@@ -16,7 +16,6 @@ Imports:
     fastcluster,
     ggrepel,
     ggsci,
-    gridExtra,
     RColorBrewer,
     reshape2,
     rlang,
@@ -24,8 +23,7 @@ Imports:
     shiny (>= 1.5.0),
     stringi,
     tidyr,
-    uwot,
-    shinythemes
+    uwot
 Encoding: UTF-8
 URL: https://github.com/NIAID/JoesFlow
 BugReports: https://github.com/NIAID/JoesFlow/issues
@@ -39,4 +37,4 @@ Suggests:
 Config/testthat/edition: 3
 Language: en-US
 VignetteBuilder: knitr
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
